# HookLeap

./: .gitignore  CMakeLists.txt  README.md
assets/maps/: map1.txt  map2.txt
include/core/: MainWindow.hpp  Physics.hpp
include/game/: AnimatedSprite.hpp  Character.hpp  Checkpoint.hpp  Coin.hpp  Hook.hpp  Pickup.hpp  Platform.hpp  Player.hpp  WinPickup.hpp
src/: main.cpp
src/core/: MainWindow.cpp  Physics.cpp
src/game/: AnimatedSprite.cpp  Character.cpp  Checkpoint.cpp  Coin.cpp  Hook.cpp  Pickup.cpp  Platform.cpp  Player.cpp  WinPickup.cpp
